fixed button spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -325,7 +325,6 @@ p {
   border-radius: 20px;
   border: none;
   padding: 1rem 0.8rem;
-  margin: 0 5px;
   text-transform: uppercase;
   -webkit-filter: drop-shadow(4px 4px 0 #000000);
           filter: drop-shadow(4px 4px 0 #000000);
@@ -490,6 +489,10 @@ ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.counter-buttons button:nth-of-type(1) {
+  margin: 0 10px 0 0;
 }
 
 .header-container {
