--- a/src/styles/sass/partials/_Card.scss
+++ b/src/styles/sass/partials/_Card.scss
@@ -34,3 +34,9 @@
 	flex-direction: row;
 	justify-content: space-between;
 }
+
+.counter-buttons {
+	button:nth-of-type(1) {
+		margin: 0 10px 0 0;
+	}
+}
