--- a/src/styles/sass/partials/_typography.scss
+++ b/src/styles/sass/partials/_typography.scss
@@ -44,7 +44,7 @@ p {
 	border-radius: $border-radius;
 	border: none;
 	padding: 1rem 0.8rem;
-	margin: 0 5px;
+	// margin: 0 5px;
 	text-transform: uppercase;
 	filter: drop-shadow(4px 4px 0 $clr-black);
 	transition: all 0.15s ease-in-out;
